<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/screen_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lock_mode_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/margin_left_main"
            android:text="LOCK MODE"
            android:textColor="#555555"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/lock_mode_header"
            android:layout_marginRight="@dimen/margin_right_main"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/help"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radiogrp_mode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lock_mode_header"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="@dimen/margin_right_main"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_kids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:hint="No way to unlock except by completion of the time or schedule that has been specified"
                android:paddingLeft="10dp"
                android:text="@string/kids_mode"
                android:theme="@style/MyRadioButton" />

            <RadioButton
                android:id="@+id/radio_mom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/mom_mode"
                android:theme="@style/MyRadioButton" />

            <RadioButton
                android:id="@+id/radio_punishment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/punishment_mode"
                android:textColor="@color/black"
                android:theme="@style/MyRadioButton" />
        </RadioGroup>

        <View
            android:id="@+id/view_sep1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/radiogrp_mode"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="@dimen/margin_left_main"
            android:layout_marginRight="@dimen/margin_right_main"
            android:layout_marginTop="15dp"
            android:background="#E2E2E2" />

        <TextView
            android:id="@+id/lock_setting_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/view_sep1"
            android:layout_marginLeft="@dimen/margin_left_main"
            android:layout_marginRight="@dimen/margin_right_main"
            android:text="LOCK SETTING"
            android:textColor="#555555"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/clock_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lock_setting_header"
            android:layout_marginLeft="@dimen/margin_left_main"
            android:layout_marginRight="@dimen/margin_right_main"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@drawable/ic_clock" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lock for"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edt_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:hint="these"
                    android:inputType="number" />

                <Spinner
                    android:id="@+id/time_unit_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:entries="@array/timer_units" />
            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/edt_pass_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/clock_settings"
            android:layout_marginLeft="@dimen/margin_left_main"
            android:layout_marginRight="@dimen/margin_right_main">

            <ImageView
                android:id="@+id/img_pass"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_alignBottom="@+id/inp_pass"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/inp_pass"
                android:src="@drawable/ic_password"
                android:tint="@color/colorAccent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inp_pass"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/img_pass"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter unlock pin"
                    android:inputType="textPassword"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                    android:minWidth="100dp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imgShowHide"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="4dp"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@+id/inp_pass"
                android:layout_alignTop="@+id/inp_pass"
                android:src="@drawable/ic_show_pass"/>
        </RelativeLayout>


        <ImageView
            android:id="@+id/img_notification"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_alignBottom="@+id/enable_switch_cont"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/enable_switch_cont"
            android:layout_marginLeft="@dimen/margin_left_main"
            android:src="@drawable/ic_notification" />

        <LinearLayout
            android:id="@+id/enable_switch_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_pass_cont"
            android:layout_marginLeft="@dimen/margin_left_main"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img_notification"
            android:orientation="vertical">

            <Switch
                android:id="@+id/enable_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="show"
                android:text="Enable Notification" />

            <TextView
                android:id="@+id/enable_switch_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enable_switch"
                android:paddingRight="50dp"
                android:text="@string/hint_enable_switch"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>